# corner-case

./: .gitignore  Anchor.toml  DEPLOY.md  FEEDBACK.md  PLAN.md  README.md  package-lock.json  package.json  tsconfig.json
.claude/: launch.json
docs/: TECHNICAL.md  VIDEO_SCRIPT.md
docs/slides/: 1-hook.html  2-gates.html  3-close.html
fixtures/: proof_18241006_seq962_k1-2-7-8.json
idls/: corner_case.json
keeper/: .gitignore  README.md  package-lock.json  package.json  settlements.jsonl  tsconfig.json
keeper/src/: auth.ts  record.ts  recorder.ts  relay-server.ts  relay.ts  replay.ts  settle.ts  smoke.ts  state.ts  txline.ts
migrations/: deploy.ts
programs/corner_case/: Cargo.toml
programs/corner_case/src/: constants.rs  errors.rs  lib.rs  state.rs  txoracle.rs
programs/corner_case/src/instructions/: accept_market.rs  cancel_market.rs  create_market.rs  mod.rs  settle_market.rs  void_market.rs
scripts/: demo_early_settle.mjs  devnet_e2e.mjs  seed_market.mjs  sync_settlements.mjs
spike/: NOTES.md  check_roots.mjs  probe_view.mjs  txline_full_chain_verify.mjs  txline_stat_verify.mjs
tests/: corner_case.ts
tests/fixtures/: test-mint.json
web/: next.config.mjs  package-lock.json  package.json  tailwind.config.ts  tsconfig.tsbuildinfo  wrangler.toml
web/app/: globals.css  layout.tsx  page.tsx  providers.tsx
web/components/: DemoBanner.tsx  Header.tsx  LiveMatch.tsx  MarketCard.tsx  MatchFingerprint.tsx  MerkleChain.tsx  OddsStrip.tsx  StateBadge.tsx  Toasts.tsx
worker/: package-lock.json  package.json  tsconfig.json  wrangler.toml
(+90 files in other folders)
